--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h3 {
 }
 
 .input-group {
-	width: 52.5%;
+	width: 60%;
 }
 
 .mt-auto {
@@ -26,4 +26,8 @@ h3 {
 
 .capitalize {
   text-transform: capitalize;
+}
+
+.toast {
+	padding: 0.5em;
 }
